# lexicom

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py  routes.py
docker/: Dockerfile
phone_book/: routers.py  validate.py
redis_tools/: tools.py
