[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["a.bakeev  <a.bakeev@idaproject.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
redis = "^4.5.4"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
